Issue fix - Event detail needs styling (too much space between the event details and social share)

--- a/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
+++ b/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
@@ -1403,6 +1403,7 @@ p.double {
     }
 
 .module-c {
+    float: right;
 }
 
     .module-c > * {
